# ai-news-aggregator-about_wechat_github_aihot-

./: .env.lark.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: sources.yaml
scripts/: setup_autostart.bat  setup_lark_push.bat  setup_lark_push.sh  setup_scheduler.bat
src/ainews/: __init__.py  __main__.py  scheduler.py
src/ainews/adapters/: trendradar_adapter.py
src/ainews/adapters/output/2026年06月28日/txt/: 12时52分_wechat.txt
src/ainews/connectors/: __init__.py  aihot_connector.py  base.py  github_connector.py  mp_extractor.py  telegram_connector.py  telegram_export_connector.py  tg_local_reader.py  wechat_mp_connector.py
src/ainews/core/: __init__.py
src/ainews/models/: __init__.py
src/ainews/schemas/: __init__.py  normalized_item.py
src/ainews/services/: __init__.py  dedup_service.py  push_service.py  scoring_service.py  source_fetch_service.py  subscription_service.py
src/ainews/ui/: app.py
src/ainews/web/: __init__.py  app.py
src/ainews/web/static/: app.css
src/ainews/web/templates/: base.html  dashboard.html  fetch.html  push.html  settings.html  subscriptions.html
tests/: conftest.py  test_aihot_connector.py  test_dedup_service.py  test_external_sources.py  test_github_connector.py  test_normalized_item.py  test_scoring_service.py  test_wechat_mp_connector.py
